<resources>
    <string name="app_name">VIC</string>
    <string name="logo">Logo</string>
    <string name="date">28/7/2019</string>
    <string name="time">6:30 PM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete?</string>
    <string name="wanna_delete">Do you want to DELETE this file?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_txt">Delete</string>
    <string name="choose_action">Choose an Action</string>
    <string name="capture_image">Capture Image</string>
    <string name="browse_image">Browse Image</string>
    <string name="capture_video">Capture Video</string>
    <string name="browse_video">Browse Video</string>
    <string name="compress_file">Compress File</string>
    <string name="file_name">Rename your file</string>
    <string name="file_name_msg">Rename your file to save it into your gallery.</string>
    <string name="compress_info">Below is the properties of uncompressed file. To reduce file size, click on \"Compress\" button. Click on \"Cancel\" button to Dismiss compression dialog.</string>
    <string name="compress">Compress</string>
    <string name="title">Title:</string>
    <string name="size">Size:</string>
    <string name="type">Type:</string>
    <string name="path">Path:</string>
    <string name="icon_holder">Result Icon</string>
    <string name="re_compress">Recompress</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="select_all">Select All</string>
    <string name="wlc_msg">Welcome To VIC</string>
    <string name="get_started">Let\'s Gets Started</string>

    <!-- Google Ads Ids -->
    <string name="admob_app_id">ca-app-pub-8487024459437907~5936948739</string>
    <string name="banner_ad_id">ca-app-pub-8487024459437907/2653622920</string>
    <string name="interstitial_ad_id">ca-app-pub-8487024459437907/3391989526</string>

    <string name="admob_app_test_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_test_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>
