<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/norm_pad"
    android:id="@+id/splash_layout"
    android:background="@color/colorLightGray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.videoimagecompressor.SplashActivity">

    <ImageView
        android:id="@+id/logo_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/vic_logo"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/wlc_msg_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wlc_msg"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:layout_marginTop="@dimen/norm_margin"
        app:layout_constraintStart_toStartOf="@+id/logo_holder"
        app:layout_constraintEnd_toEndOf="@+id/logo_holder"
        app:layout_constraintTop_toBottomOf="@+id/logo_holder"/>

    <!-- Get Started Button -->
    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_bg"
        app:layout_constraintStart_toStartOf="@+id/wlc_msg_tv"
        app:layout_constraintEnd_toEndOf="@+id/wlc_msg_tv"
        app:layout_constraintTop_toBottomOf="@+id/wlc_msg_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>