<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/norm_margin"
    android:minWidth="300dp"
    android:minHeight="200dp"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dialog.DeleteItemDialogFragment">

    <!-- Delete Text Label -->
    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="@dimen/norm_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/sm_margin"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sec_layout"/>

    <!-- Message Card Box -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sec_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/norm_margin"
        android:padding="@dimen/norm_pad"
        android:background="@drawable/rounded_rect_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_tv"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Deleting Message -->
        <TextView
            android:id="@+id/delete_msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanna_delete"
            android:textSize="@dimen/norm_size"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/sec_layout"
            app:layout_constraintTop_toTopOf="@+id/sec_layout"/>

        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete_msg_tv"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:background="@drawable/btn_trans_bg"
            app:layout_constraintTop_toBottomOf="@+id/delete_msg_tv"
            app:layout_constraintStart_toStartOf="@+id/sec_layout"
            app:layout_constraintBottom_toBottomOf="@+id/sec_layout"
            app:layout_constraintEnd_toStartOf="@+id/delete_btn"/>

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_txt"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            app:layout_constraintTop_toTopOf="@+id/cancel_btn"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_btn"
            app:layout_constraintStart_toEndOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="@+id/sec_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>