<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="8dp"
    app:cardCornerRadius="4dp"
    android:layout_margin="@dimen/norm_margin"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dialog.LoadingDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/norm_pad">

        <!-- Progressbar -->
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="@+id/parent_layout"
            app:layout_constraintTop_toTopOf="@+id/parent_layout"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"/>

        <!-- Icon Holder -->
        <ImageView
            android:id="@+id/icon_holder"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/icon_holder"
            android:scaleType="centerCrop"
            android:src="@drawable/vic_logo"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/parent_layout"
            app:layout_constraintTop_toTopOf="@+id/parent_layout"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"/>

        <!-- Title Holder -->
        <TextView
            android:id="@+id/title_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/norm_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/norm_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/parent_layout" />

        <!-- Message Holder -->
        <TextView
            android:id="@+id/msg_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sm_size"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/title_holder"
            app:layout_constraintTop_toBottomOf="@+id/title_holder" />

        <!-- Re-Compress Button -->
        <Button
            android:id="@+id/re_compress_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="@dimen/xsm_margin"
            android:paddingStart="@dimen/xsm_pad"
            android:paddingEnd="@dimen/xsm_pad"
            android:text="@string/re_compress"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"
            app:layout_constraintEnd_toEndOf="@+id/parent_layout"
            app:layout_constraintTop_toBottomOf="@+id/msg_holder" />

        <!-- Save Button -->
        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_trans_bg"
            android:layout_marginTop="@dimen/xsm_margin"
            android:paddingStart="@dimen/xsm_pad"
            android:paddingEnd="@dimen/xsm_pad"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"
            app:layout_constraintEnd_toEndOf="@+id/parent_layout"
            app:layout_constraintTop_toBottomOf="@+id/msg_holder" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="50dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>