<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="4dp"
    android:divider="@android:color/transparent"
    android:dividerHeight="0.0px"
    android:clipToPadding="false"
    android:clipChildren="false"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/norm_pad">

        <!-- Media File Thumbnail -->
        <ImageView
            android:id="@+id/thumbnail_holder"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/vic_logo"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"
            app:layout_constraintStart_toStartOf="@+id/parent_layout"
            app:layout_constraintTop_toTopOf="@+id/parent_layout"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

        <!-- Separator -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="60dp" />

        <!-- Title Holder -->
        <TextView
            android:id="@+id/title_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/norm_margin"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/norm_size"
            android:maxLines="1"
            android:ems="7"
            android:maxEms="8"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/parent_layout"
            app:layout_constraintBottom_toTopOf="@+id/size_holder"/>

        <!-- Size Holder -->
        <TextView
            android:id="@+id/size_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:maxLines="1"
            android:layout_marginTop="@dimen/xsm_margin"
            android:ems="7"
            android:maxEms="8"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/title_holder"
            app:layout_constraintTop_toBottomOf="@+id/title_holder"
            app:layout_constraintBottom_toTopOf="@+id/type_holder"/>

        <!-- Type Holder -->
        <TextView
            android:id="@+id/type_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/xsm_margin"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:maxLines="1"
            android:ems="7"
            android:maxEms="8"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/size_holder"
            app:layout_constraintTop_toBottomOf="@+id/size_holder"
            app:layout_constraintBottom_toTopOf="@+id/path_holder"/>

        <!-- Path Holder -->
        <TextView
            android:id="@+id/path_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/xsm_margin"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:maxLines="1"
            android:ems="7"
            android:maxEms="8"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/type_holder"
            app:layout_constraintTop_toBottomOf="@+id/type_holder"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"/>


        <!-- Path Holder -->
        <TextView
            android:id="@+id/path_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="@dimen/xsm_margin"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:maxLines="1"
            android:ems="7"
            android:maxEms="8"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/type_holder"
            app:layout_constraintTop_toBottomOf="@+id/type_holder"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"/>

        <!-- Date Holder -->
        <TextView
            android:id="@+id/date_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginTop="@dimen/xsm_margin"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/parent_layout"
            app:layout_constraintTop_toTopOf="@+id/parent_layout"/>

        <!-- Time Holder -->
        <TextView
            android:id="@+id/time_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginTop="@dimen/xsm_margin"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/sm_size"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/date_holder"
            app:layout_constraintBottom_toBottomOf="@+id/parent_layout"
            app:layout_constraintEnd_toEndOf="@+id/date_holder"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>